--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 12 - 128GB</strong>
                             </div>
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 12 - 128GB</strong>
                             </div>
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 12 - 128GB</strong>
                             </div>
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 12 - 128GB</strong>
                             </div>
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 12 - 128GB</strong>
                             </div>
@@ -114,7 +114,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 12 - 128GB</strong>
                             </div>
@@ -137,7 +137,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 13 Pro - 128GB</strong>
                             </div>
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 13 Pro - 128GB</strong>
                             </div>
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 13 Pro - 128GB</strong>
                             </div>
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 13 Pro - 128GB</strong>
                             </div>
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 13 Pro - 128GB</strong>
                             </div>
@@ -217,7 +217,7 @@
                     </div>
 
                     <div class="col-lg-4  col-md-6">
-                        <div class="card">
+                        <div class="card product">
                             <div class="card-header">
                                 <strong>IPHONE 13 Pro - 128GB</strong>
                             </div>
