--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             </div>
         </div>
     </header>
+
+        <div class="container">
+            <div class="carousel carousel-fade slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div data-bs-interval="2000" class="carousel-item active">
+                        <img class="d-block w-100" src="carousel/novatop2.png" alt="">
+                    </div>
+                    <div data-bs-interval="2000" class="carousel-item">
+                        <img class="d-block w-100" src="carousel/510452.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <div data-bs-spy="scroll" data-bs-target="#cabecalho">
         <section id="seminovos">
             <h2>Semi novos</h2>
